fix: status bar count text align

--- a/src/components/statusbar/statusbar.module.scss
+++ b/src/components/statusbar/statusbar.module.scss
@@ -23,6 +23,7 @@
         span {
             display: inline-block;
             min-width: 8ch;
+            text-align: left;
         }
     }
 }
